--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dolomites National Park</title>
+  <title>Dolomite National Park</title>
   <link rel="icon" type="image/x-icon" href="/img/favicon.png">
   <link rel="stylesheet" href="/css/main.css">
   <script src="https://kit.fontawesome.com/bbd2f77825.js" crossorigin="anonymous"></script>
@@ -17,15 +17,16 @@
   <section class="hero">
 
     <div class="nav-container">
-      <h1 class="logo">
-        <a href="#"><i class="fa-brands fa-think-peaks"></i></a>
-      </h1>
+      <div class="logo">
+        <a href="#"><i class="fa-brands fa-pagelines"></i></a>
+      </div>
       <nav class="nav-row">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="#">What to see</a></li>
           <li><a href="#">Where to stay</a></li>
           <li><a href="#">About us</a></li>
+          <li><a class="burger" href="#">&#9776;</a></li>
         </ul>
       </nav>
     </div>
